feat(chat): generate conversation titles and configurable thinking spinner
Improve chat session readability by replacing fallback conversation names with AI-generated titles after the first prompt. Also add a configurable braille-based loading spinner so thinking feedback can be customized from application settings.